--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -45,13 +45,14 @@ $colors: (
 // App iOS Variables
 // --------------------------------------------------
 // iOS only Sass variables can go here
-
+$list-ios-text-color: red;
 
 
 
 // App Material Design Variables
 // --------------------------------------------------
 // Material Design only Sass variables can go here
+$list-md-text-color: blue;
 
 
 
